Fix:		Replace color literals by variables Fix:		Leave more shadows dark in dark mode

--- a/djangocms_admin_style/sass/components/_header.scss
+++ b/djangocms_admin_style/sass/components/_header.scss
@@ -85,7 +85,7 @@
                 border-top: none;
                 border-radius: 0 0 4px 4px;
                 background: rgba($white, .97);
-                box-shadow: 0 1px 1px rgba($black, .4);
+                box-shadow: 0 1px 1px rgba($black-fallback, .4);
                 &.submenu-open {
                     display: block;
                 }
