--- a/djangocms_admin_style/sass/components/_sticky-nav.scss
+++ b/djangocms_admin_style/sass/components/_sticky-nav.scss
@@ -50,6 +50,6 @@
         white-space: nowrap;
     }
     #nav-sidebar table {
-        box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+        box-shadow: 0 0 5px 0 rgba($black-fallback, 0.2);
     }
 }
